--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,16 @@
     padding-left: 10px;
 }
 
+.tvOptions{
+    display: flex;
+    flex-direction: row;
+}
+
+.tvOptions img{
+    margin: 0 5px;
+    width: 15px;
+}
+
 .container-container{
     display: flex;
     flex-direction: column;
